Fixed Form Header Not Responsive, Removed useFetch Logs

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -413,7 +413,7 @@
                 width: 60%;
 
                 h1 {
-                  font-size: 2.9rem;
+                  font-size: 2.9rem !important;
                 }
               }
 
@@ -421,7 +421,7 @@
                 width: 80%;
 
                 h1 {
-                  font-size: 2.3rem;
+                  font-size: 2.3rem !important;
                 }
               }
 
